featureimage path test 2

--- a/content/posts/240613_lumine.md
+++ b/content/posts/240613_lumine.md
@@ -4,7 +4,7 @@ title: ルミネ横浜 2024年下半期 ラッキーコスメ占い
 slug: dooh/lumine
 status: Published
 date: '2024-06-13'
-featuredImage: './blog/lumine_luckycosme.png'
+featuredImage: '../images//blog/lumine_luckycosme.png'
 excerpt: >-
   ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。
 categories:
