fixed all featureimage path

--- a/content/posts/090106_wd3.md
+++ b/content/posts/090106_wd3.md
@@ -4,7 +4,7 @@ title: 「ウェブデザイン技能検定3級問題集」執筆
 slug: blog/webdesign3
 status: Published
 date: '2009-01-06'
-featuredImage: '/blog/pub-wd3.jpg'
+featuredImage: '../images/blog/pub-wd3.jpg'
 excerpt: >-
   国家資格ウェブデザイン技能検定3級対策問題集の執筆をしました。
 categories:
