--- a/content/posts/100220_tedx.md
+++ b/content/posts/100220_tedx.md
@@ -4,7 +4,7 @@ title: TEDxRyukyu
 slug: blog/tedx
 status: Published
 date: '2010-02-20'
-featuredImage: '/blog/tedx1.gif'
+featuredImage: '../images/blog/tedx1.gif'
 excerpt: >-
  TEDxRyukyuのサイト制作と開催オーガナイザー
 categories:
