--- a/content/posts/111130_wd2.md
+++ b/content/posts/111130_wd2.md
@@ -4,7 +4,7 @@ title: 「ウェブデザイン技能検定　2級ガイドブック」執筆
 slug: blog/webdesign2
 status: Published
 date: '2011-11-30'
-featuredImage: '/blog/pub-wd2.jpg'
+featuredImage: '../images/blog/pub-wd2.jpg'
 excerpt: >-
   国家資格ウェブデザイン技能検定2級ガイドブックの執筆をしました。
 categories:
