--- a/content/posts/120307_bousai.md
+++ b/content/posts/120307_bousai.md
@@ -4,7 +4,7 @@ title: 防災管理啓蒙コンテンツ @東京消防庁消防博物館
 slug: dooh/bousai
 status: Published
 date: '2012-03-07'
-featuredImage: '/blog/shobo1.jpg'
+featuredImage: '../images/blog/shobo1.jpg'
 excerpt: >-
   「防災管理」の啓蒙をするコンテンツを制作しました。
 categories:
