--- a/content/posts/120528-2_jquery.md
+++ b/content/posts/120528-2_jquery.md
@@ -4,7 +4,7 @@ title: 「jQuery Mobile標準ガイドブック」執筆
 slug: blog/jQueryMobile
 status: Published
 date: '2012-05-28'
-featuredImage: '/blog/jqm1.jpg'
+featuredImage: '../images/blog/jqm1.jpg'
 excerpt: >-
   デザイナ向けのjQuery Mobile指南書「ノン・プログラマのためのjQuery Mobile標準ガイドブック」を執筆しました。
 categories:
