--- a/content/posts/120528_edo.md
+++ b/content/posts/120528_edo.md
@@ -4,7 +4,7 @@ title: 江戸名所図屏風解説展示 @浅草文化観光センター
 slug: dooh/edo
 status: Published
 date: '2012-05-28'
-featuredImage: '/blog/edo1.jpg'
+featuredImage: '../images/blog/edo1.jpg'
 excerpt: >-
   江戸屏風のポイントを紹介するAndroidタブレット向けコンテンツを制作。屏風の拡大縮小、指でのスクロールなどの他、要所マークをタップすると解説を表示する。
 categories:
