--- a/content/posts/131201_ffoih.md
+++ b/content/posts/131201_ffoih.md
@@ -4,7 +4,7 @@ title: 富士フイルム様 Open Innovation Hub
 slug: dooh/ffoih
 status: Published
 date: '2013-12-01'
-featuredImage: '/blog/ffoih.png'
+featuredImage: '../images/blog/ffoih.png'
 excerpt: >-
   富士フイルムが有する最先端のコア技術の数々を紹介する施設「Open Innovation Hub」。ここのタッチパネル式コア技術検索紹介端末を実装しました。
 categories:
