--- a/content/posts/140401_rbc.md
+++ b/content/posts/140401_rbc.md
@@ -4,7 +4,7 @@ title: 琉球放送株式会社様 ウェブサイト構築
 slug: blog/rbc
 status: Published
 date: '2014-04-01'
-featuredImage: '/blog/rbc1.png'
+featuredImage: '../images/blog/rbc1.png'
 excerpt: >-
   琉球放送様のウェブサイトをリデザイン、wordpress化しました。
 categories:
