--- a/content/posts/180912_nhkbs.md
+++ b/content/posts/180912_nhkbs.md
@@ -4,7 +4,7 @@ title: NHK BS 今日のラッキーワードキャンペーン
 slug: dooh/nhkbs
 status: Published
 date: '2018-09-12'
-featuredImage: '/blog/nhkbs.jpg'
+featuredImage: '../images/blog/nhkbs.jpg'
 excerpt: >-
   NHK BSのキャンペーン。新宿駅東口構内通路の広告パネルに6台の液晶パネルを設置。
 categories:
