--- a/content/posts/190201_nikon.md
+++ b/content/posts/190201_nikon.md
@@ -4,7 +4,7 @@ title: ニコンメガネ様 技術紹介映像タッチパネル端末
 slug: dooh/nikon
 status: Published
 date: '2019-02-01'
-featuredImage: '/blog/nikon1.jpg'
+featuredImage: '../images/blog/nikon1.jpg'
 excerpt: >-
   ニコンメガネ様の店頭でご利用いただく技術紹介映像タッチパネル端末を開発。Python版とHMP版とを制作。
 categories:
