--- a/content/posts/190319_jdla.md
+++ b/content/posts/190319_jdla.md
@@ -4,7 +4,7 @@ title: JDLA Deep Learning for GENERAL 2019 #1 取得
 slug: blog/jdla
 status: Published
 date: '2019-03-19'
-featuredImage: '/blog/general2019_regular.png'
+featuredImage: '../images/blog/general2019_regular.png'
 excerpt: >-
   一般社団法人日本ディープラーニング協会が実施するG検定(ジェネラリスト検定)を取得しました。
 categories:
