--- a/content/posts/100406_rfid.md
+++ b/content/posts/100406_rfid.md
@@ -4,7 +4,7 @@ title: 月刊「自動認識 5月号」記事執筆
 slug: blog/rfid
 status: Published
 date: '2010-04-06'
-featuredImage: '/blog/pub-jido.jpg'
+featuredImage: '../images/blog/pub-jido.jpg'
 excerpt: >-
   日本工業出版発行の、月刊「自動認識 5月号」にて「RFIDを活用した"拾う"インターフェイス」を題に、執筆しました。（著者：木曽隆、吉田コマキ）
 categories:
