--- a/content/posts/240613_lumine.md
+++ b/content/posts/240613_lumine.md
@@ -5,7 +5,7 @@ slug: dooh/lumine
 status: Published
 date: '2024-06-13'
 featuredImage: '../images/blog/lumine_luckycosme_thumb.png'
-excerpt: >-
+excerpt:
   ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。
 categories:
   - category: DOOH
