--- a/content/posts/240613_lumine.md
+++ b/content/posts/240613_lumine.md
@@ -5,7 +5,7 @@ slug: dooh/lumine
 status: Published
 date: '2024-06-13'
 featuredImage: '../images/blog/lumine_luckycosme_thumb.png'
-excerpt:
+excerpt: >-
   ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。
 categories:
   - category: DOOH
@@ -17,7 +17,6 @@ meta:
 ![](/blog/lumine_luckycosme.png)
 
 #### Abstract
-
 　 ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。タッチパネルによりアンケートに答え、その回答をもとに診断コンテンツを表示、また同内容をクーポン付きの特別紙に印刷し、店内販促にもつなげています。
 
 #### Reference
@@ -26,6 +25,6 @@ meta:
 
 #### Team
 
-- クライアント　株式会社ルミネ
-- 代理店　　　　JR東日本企画／富士フイルムイメージングシステムズ／ハヤテ
-- 制作開発　　　プログラミング：ブロッコ・デリ・アーキテクツ有限会社
+- クライアント：株式会社ルミネ
+- 代理店：JR東日本企画／富士フイルムイメージングシステムズ／ハヤテ
+- 制作開発：プログラミング：ブロッコ・デリ・アーキテクツ有限会社
