--- a/content/posts/240613_lumine.md
+++ b/content/posts/240613_lumine.md
@@ -6,7 +6,7 @@ status: Published
 date: '2024-06-13'
 featuredImage: '../images/blog/lumine_luckycosme_thumb.png'
 excerpt: >-
-  ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。
+  ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。x
 categories:
   - category: DOOH
 meta:
