--- a/content/posts/240613_lumine.md
+++ b/content/posts/240613_lumine.md
@@ -6,7 +6,7 @@ status: Published
 date: '2024-06-13'
 featuredImage: '../images/blog/lumine_luckycosme_thumb.png'
 excerpt: >-
-  ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。x
+  ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。
 categories:
   - category: DOOH
 meta:
@@ -17,7 +17,7 @@ meta:
 ![](/blog/lumine_luckycosme.png)
 
 #### Abstract
-　 ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。タッチパネルによりアンケートに答え、その回答をもとに診断コンテンツを表示、また同内容をクーポン付きの特別紙に印刷し、店内販促にもつなげています。
+　 .ルミネ横浜にて参加型デジタルサイネージ「ラッキーコスメ占い」を設置。プログラミングを担当しました。タッチパネルによりアンケートに答え、その回答をもとに診断コンテンツを表示、また同内容をクーポン付きの特別紙に印刷し、店内販促にもつなげています。
 
 #### Reference
 
